# thx-android

./: .gitignore  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aes-gcm.c  aes-gcm.h  android.c  h2thx.c  include  linux-tls.c  rbtree.c  rbtree.h  server.c  thx.c  thx.h
app/src/main/java/w/thx/: ThxActivity.kt  ThxApp.kt  ThxConfig.kt  ThxService.kt
app/src/main/res/drawable/: bg_akari.xml  bg_button.xml  ic_down.xml  ic_off.xml  ic_on.xml  ic_rocket.xml  shape_button.xml  shape_pressed.xml
app/src/main/res/layout/: home.xml  main.xml
app/src/main/res/values/: strings.xml  style.xml
gradle/wrapper/: gradle-wrapper.properties
